--- a/talks.qmd
+++ b/talks.qmd
@@ -4,6 +4,11 @@ title: "Talks, presentations, workshops..."
 
 ## Talks
 
+- For the 11th *rencontres R* (French-speaking R users and developers conference) in Mons, Belgium, from the 19th to the 21st of May, I presented a poster explaining
+  the basics of `{rix}`. Download it [https://raw.githubusercontent.com/b-rodrigues/blog/refs/heads/master/assets/files/rix-poster-fr.pdf](here)!
+
+- *Building fully reproducible data science environments for R and Python with ease using nix, rix, and Docker*: a talk for the BASF data science community I gave on the 5th of May, [repository with code](https://github.com/b-rodrigues/repro_basf) and [slides](https://b-rodrigues.github.io/repro_basf/#/title-slide)
+
 - *Reproducible Data Science Environments with {rix}*: a webinar for R Medicine on the 13th of March 2025, [video of presentation](https://www.youtube.com/watch?v=jhiRNQHbEXo), [repository with code](https://github.com/b-rodrigues/r-medicine-rix) and [slides](https://b-rodrigues.github.io/r-medicine-rix/#/title-slide)
 
 - *What’s up with reproducibility in R?*: talk I gave for the Data and Analytics Learning seminars from the Bank of England 
