--- a/talks.qmd
+++ b/talks.qmd
@@ -5,7 +5,7 @@ title: "Talks, presentations, workshops..."
 ## Talks
 
 - For the 11th *rencontres R* (French-speaking R users and developers conference) in Mons, Belgium, from the 19th to the 21st of May, I presented a poster explaining
-  the basics of `{rix}`. Download it [https://raw.githubusercontent.com/b-rodrigues/blog/refs/heads/master/assets/files/rix-poster-fr.pdf](here)!
+  the basics of `{rix}`. Download it [here](https://raw.githubusercontent.com/b-rodrigues/blog/refs/heads/master/assets/files/rix-poster-fr.pdf)!
 
 - *Building fully reproducible data science environments for R and Python with ease using nix, rix, and Docker*: a talk for the BASF data science community I gave on the 5th of May, [repository with code](https://github.com/b-rodrigues/repro_basf) and [slides](https://b-rodrigues.github.io/repro_basf/#/title-slide)
 
