--- a/talks.qmd
+++ b/talks.qmd
@@ -6,51 +6,70 @@ title: "Talks, presentations, workshops..."
 
 ### 2025
 
-- *Environnements reproductibles pour la science des données avec {rix}*: in French, a webinar for the French Network of Reproducibility, 13th of June 2025, 
-[repository with code](https://github.com/b-rodrigues/repro_rrr) and [slides](https://b-rodrigues.github.io/repro_rrr/)
+- *Reproducible data science with Nix, {rix}, and {rixpress}* — Workshop for [Workshops for Ukraine](https://sites.google.com/view/dariia-mykhailyshyna/main/r-workshops-for-ukraine#h.i5kscpfah5at), June 20, 2025.  
+  [Code repository](https://github.com/b-rodrigues/repro_ukraine), [slides](https://b-rodrigues.github.io/repro_ukraine/)
 
-- *Reproducible environments and pipelines with `{rix}` and `{rixpress}`*: workshop I did for R Medicine 2025 on the 11th of June 2025, [youtube video](https://youtu.be/odC3soY2qnk), [code repo here](https://github.com/b-rodrigues/r-medicine-nix-workshop) and slides [here](https://b-rodrigues.github.io/r-medicine-nix-workshop/#/title-slide).
+- *Reproducible environments for data science with {rix}* — Webinar for the University of Lisbon, June 18, 2025.  
+  [Code repository](https://github.com/b-rodrigues/repro_ulisboa), [slides](https://b-rodrigues.github.io/repro_ulisboa/)
 
-- For the 11th *rencontres R* (French-speaking R users and developers conference) in Mons, Belgium, from the 19th to the 21st of May, I presented a poster explaining
-  the basics of `{rix}`. Download it [here](https://raw.githubusercontent.com/b-rodrigues/blog/refs/heads/master/assets/files/rix-poster-fr.pdf)!
+- *Environnements reproductibles pour la science des données avec {rix}* — Webinar in French for the Réseau Français de la Reproductibilité, June 13, 2025.  
+  [Code repository](https://github.com/b-rodrigues/repro_rrr), [slides](https://b-rodrigues.github.io/repro_rrr/)
 
-- *Building fully reproducible data science environments for R and Python with ease using nix, rix, and Docker*: a talk for the BASF data science community I gave on the 5th of May, [repository with code](https://github.com/b-rodrigues/repro_basf) and [slides](https://b-rodrigues.github.io/repro_basf/#/title-slide)
+- *Reproducible environments and pipelines with {rix} and {rixpress}* — Workshop for R Medicine 2025, June 11, 2025.  
+  [Video](https://youtu.be/odC3soY2qnk), [code repository](https://github.com/b-rodrigues/r-medicine-nix-workshop), [slides](https://b-rodrigues.github.io/r-medicine-nix-workshop/#/title-slide)
 
-- *Reproducible Data Science Environments with {rix}*: a webinar for R Medicine on the 13th of March 2025, [youtube video](https://www.youtube.com/watch?v=jhiRNQHbEXo), [repository with code](https://github.com/b-rodrigues/r-medicine-rix) and [slides](https://b-rodrigues.github.io/r-medicine-rix/#/title-slide)
+- *{rix} poster presentation* — Presented at the 11th *Rencontres R* in Mons, Belgium (May 19–21, 2025).  
+  [Download the poster (PDF)](https://raw.githubusercontent.com/b-rodrigues/blog/refs/heads/master/assets/files/rix-poster-fr.pdf)
 
-- *What’s up with reproducibility in R?*: talk I gave for the Data and Analytics Learning seminars from the Bank of England 
-  on the 29th of January 2025. [Repository with code](https://github.com/b-rodrigues/repro_boe) and [slides](https://b-rodrigues.github.io/repro_boe/#/title-slide).
+- *Building fully reproducible data science environments for R and Python with ease using Nix, {rix}, and Docker* — Talk for the BASF Data Science Community, May 5, 2025.  
+  [Code repository](https://github.com/b-rodrigues/repro_basf), [slides](https://b-rodrigues.github.io/repro_basf/#/title-slide)
+
+- *Reproducible data science environments with {rix}* — Webinar for R Medicine, March 13, 2025.  
+  [Video](https://www.youtube.com/watch?v=jhiRNQHbEXo), [code repository](https://github.com/b-rodrigues/r-medicine-rix), [slides](https://b-rodrigues.github.io/r-medicine-rix/#/title-slide)
+
+- *What’s up with reproducibility in R?* — Talk for the Data and Analytics Learning Seminars, Bank of England, January 29, 2025.  
+  [Code repository](https://github.com/b-rodrigues/repro_boe), [slides](https://b-rodrigues.github.io/repro_boe/#/title-slide)
 
 ### 2024
 
-- *BUILDING REPRODUCIBLE ANALYTICAL PIPELINES WITH R, DOCKER AND NIX*: online talk for RLadies Rome, on the 29th of June 2024. [Repository](https://github.com/b-rodrigues/rladies_rome_repro_2024/tree/main), [Slides](https://raw.githack.com/b-rodrigues/rladies_rome_repro_2024/targets-runs/rendered_slides/pres.html#/title-slide) and [video](https://www.youtube.com/watch?v=0bPMKYi7XRE).
+- *Building reproducible analytical pipelines with R, Docker, and Nix* — Online talk for RLadies Rome, June 29, 2024.  
+  [Repository](https://github.com/b-rodrigues/rladies_rome_repro_2024/tree/main), [slides](https://raw.githack.com/b-rodrigues/rladies_rome_repro_2024/targets-runs/rendered_slides/pres.html#/title-slide), [video](https://www.youtube.com/watch?v=0bPMKYi7XRE)
 
-- *Rix: reproducible environments with Nix*: talk I gave for the online part of the 2024 edition of useR! in Salzburg. [Video](https://www.youtube.com/watch?v=tM4JrCWZpwA)
+- *Rix: reproducible environments with Nix* — Talk for the online part of useR! 2024, Salzburg.  
+  [Video](https://www.youtube.com/watch?v=tM4JrCWZpwA)
 
-- *RIX: ENVIRONNEMENTS DE DÉVELOPPEMENT REPRODUCTIBLES POUR DÉVELOPPEURS R*, in French, talk and tutorial I gave for the 2024 edition of the *Rencontres R* in Vannes, Brittany, France. [Slides](https://raw.githack.com/b-rodrigues/rr_2024/targets-runs/rendered_slides/presentation/pres_rr_2024.html#/title-slide) and [tutorial](https://github.com/b-rodrigues/rr_2024/tree/main/tuto). No video available.
+- *Rix: environnements de développement reproductibles pour développeurs R* — Talk and tutorial in French for *Rencontres R* 2024, Vannes, France.  
+  [Slides](https://raw.githack.com/b-rodrigues/rr_2024/targets-runs/rendered_slides/presentation/pres_rr_2024.html#/title-slide), [tutorial](https://github.com/b-rodrigues/rr_2024/tree/main/tuto)
 
-- *Rix: ENVIRONNEMENTS DE DÉVELOPPEMENT REPRODUCTIBLES POUR DÉVELOPPEURS R*, in French, talk I gave on the 7th of June, 2024 for the INED (*Institute Nationale d'Études Démographiques*, National institute for demographic studies). [Repository](https://github.com/b-rodrigues/russ_workshop), [Slides](https://raw.githack.com/b-rodrigues/russ_workshop/targets-runs/rendered_slides/russ_pres.html#/title-slide) and [Video](https://www.canal-u.tv/chaines/ined/rix-environnements-de-developpement-reproductibles-pour-developpeurs-r#videos).
+- *Rix: environnements de développement reproductibles pour développeurs R* — Talk in French for INED (Institut National d'Études Démographiques), June 7, 2024.  
+  [Repository](https://github.com/b-rodrigues/russ_workshop), [slides](https://raw.githack.com/b-rodrigues/russ_workshop/targets-runs/rendered_slides/russ_pres.html#/title-slide), [video](https://www.canal-u.tv/chaines/ined/rix-environnements-de-developpement-reproductibles-pour-developpeurs-r#videos)
 
-- *Reproducible research with Nix and rix*, a talk I gave at the DIPF, Leibniz Institute for Research and Information in Education, in LOS! (Leibniz Open Science!), the event series of the Leibniz Strategy Forum on Open Science. The workshop was held online, on May 16, 2024. [Repository](https://github.com/b-rodrigues/dipf_workshop), [Slides](https://github.com/b-rodrigues/dipf_workshop) and [video of the talk](https://zpid.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=864361e7-d573-457b-95fc-b1a30073651e)
+- *Reproducible research with Nix and {rix}* — Talk for the DIPF (Leibniz Institute for Research and Information in Education) as part of the LOS! event series, May 16, 2024.  
+  [Repository](https://github.com/b-rodrigues/dipf_workshop), [slides](https://github.com/b-rodrigues/dipf_workshop), [video](https://zpid.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=864361e7-d573-457b-95fc-b1a30073651e)
 
-- *"rix: An R package for reproducible dev environments with Nix (FOSDEM 2024)"*, a talk I gave at FOSDEM 2024 on the 4th of February 2024 in the Nix and NixOS dev room. Video [here](https://www.youtube.com/watch?v=eWt1oXatxw8).
+- *rix: An R package for reproducible dev environments with Nix* — Talk for FOSDEM 2024, Nix/NixOS dev room, February 4, 2024.  
+  [Video](https://www.youtube.com/watch?v=eWt1oXatxw8)
 
 ### 2023
 
-- *"Building reproducible analytical pipelines"*, Workshop I gave for the ["R User Group Tunis"](https://www.meetup.com/tunis-r-user-group/) on December 9th, 2023. Video [here](https://www.youtube.com/watch?v=1jVJSPsC4Yo). Slides and code [here](https://github.com/b-rodrigues/raps_rug_tunis/tree/master/raps_rug_tunis).
+- *Building reproducible analytical pipelines* — Workshop for the [R User Group Tunis](https://www.meetup.com/tunis-r-user-group/), December 9, 2023.  
+  [Video](https://www.youtube.com/watch?v=1jVJSPsC4Yo), [slides and code](https://github.com/b-rodrigues/raps_rug_tunis/tree/master/raps_rug_tunis)
 
-- *"Porquê usar monads (programação funcional)? Uma ilustração com o pacote {chronicler}"* (*Why use monads (functional programming)? An illustration with the {chronicler} package*), Talk I gave (online) at the INE (Instituto Nacional de Estatística), on the 7th of June 2023. [Slides in Portuguese](https://jocular-panda-1e5d6e.netlify.app/#/title-slide).
+- *Porquê usar monads (programação funcional)? Uma ilustração com o pacote {chronicler}* — Talk in Portuguese for INE (Instituto Nacional de Estatística), June 7, 2023.  
+  [Slides](https://jocular-panda-1e5d6e.netlify.app/#/title-slide)
 
-- *"La reproductibilité avec R, ou pourquoi celle-ci est située sur un continuum"* (*Reproducibility with R, or why it lies on a continuum*). Talk I gave at the *Rencontres R* 2023 in Avignon, France, on the 26th of June 2023. [Slides in French](https://649017259ea33242fbd1a328--courageous-cajeta-2542d9.netlify.app/#/title-slide), [Video with English subtitles.](https://youtu.be/kan7-thkqYk)
+- *La reproductibilité avec R, ou pourquoi celle-ci est située sur un continuum* — Talk in French for *Rencontres R* 2023, Avignon, June 26, 2023.  
+  [Slides](https://649017259ea33242fbd1a328--courageous-cajeta-2542d9.netlify.app/#/title-slide), [video with English subtitles](https://youtu.be/kan7-thkqYk)
 
-- *"Building reproducible analytical pipelines"*, Workshop I gave for ["Workshops for Ukraine"](https://sites.google.com/view/dariia-mykhailyshyna/main/r-workshops-for-ukraine#h.i3fjt5lw8dyo) on June 29th, 2023. You can pull the Docker image with the slides and code [here](https://hub.docker.com/repository/docker/brodriguesco/raps_ukraine/general).
+- *Building reproducible analytical pipelines* — Workshop for [Workshops for Ukraine](https://sites.google.com/view/dariia-mykhailyshyna/main/r-workshops-for-ukraine#h.i3fjt5lw8dyo), June 29, 2023.  
+  [Docker image](https://hub.docker.com/repository/docker/brodriguesco/raps_ukraine/general)
 
-- *"Building reproducible analytical pipelines"*, Talk I gave for *ReproducibiliTea UCL* on the 19th of July, 2023. [Slides](https://64a7f00fce57ea61a8302dd5--stellar-bublanina-8574b2.netlify.app/#/title-slide) and [Video](https://youtu.be/zs6LtT0PavM). You can pull the Docker image with the slides and code [here](https://hub.docker.com/repository/docker/brodriguesco/raps_reprotea/general).
+- *Building reproducible analytical pipelines* — Talk for *ReproducibiliTea UCL*, July 19, 2023.  
+  [Slides](https://64a7f00fce57ea61a8302dd5--stellar-bublanina-8574b2.netlify.app/#/title-slide), [video](https://youtu.be/zs6LtT0PavM), [Docker image](https://hub.docker.com/repository/docker/brodriguesco/raps_reprotea/general)
 
 ## Interviews, podcasts...
 
-- French [Data Workers Podcast #1 Large Scale Testing : Contenir la covid-19 avec des dépistages ciblés](https://youtu.be/vI6KbMJAMQk)
+- [Data Workers Podcast #1 — Large Scale Testing: Contenir la COVID-19 avec des dépistages ciblés (FR)](https://youtu.be/vI6KbMJAMQk)
+- [Bruno Rodrigues défend une approche basée sur la reproductibilité de la data science au Luxembourg (FR)](https://archive.is/uNxNw)
+- [Leanpub Frontmatter Podcast #263 (EN)](https://www.youtube.com/watch?v=aXfjhf2cDo0)
 
-- French [Bruno Rodrigues défend une approche basée sur la reproductibilité de la data science au Luxembourg](https://archive.is/uNxNw)
-
-- English [Leanpub Frontmatter Podcast #263](https://www.youtube.com/watch?v=aXfjhf2cDo0)
