--- a/talks.qmd
+++ b/talks.qmd
@@ -4,6 +4,11 @@ title: "Talks, presentations, workshops..."
 
 ## Talks
 
+### 2026
+
+- *Reproducible data science environments with {rix}* — A talk I gave for the Oak Ridge National Laboratory, January 23, 2026.  
+  [Code repository](https://github.com/b-rodrigues/repro_oak_ridge), [slides](https://b-rodrigues.github.io/repro_oak_ridge/)
+
 ### 2025
 
 - *Reproducible data science with Nix, {rix}, and {rixpress}* — Workshop for [Workshops for Ukraine](https://sites.google.com/view/dariia-mykhailyshyna/main/r-workshops-for-ukraine#h.i5kscpfah5at), June 20, 2025.  
